--- a/wp-plugins/cf7-workshop-scheduler/plugin.css
+++ b/wp-plugins/cf7-workshop-scheduler/plugin.css
@@ -30,17 +30,17 @@
 }
 
 .cls-confirmed {
-    background-color: rgb(40, 173, 40) !important;
+    background-color: #22b17a !important;
     color: white;
 }
 
 .cls-option {
-    background-color: rgb(0, 81, 255) !important;
+    background-color: #2271b1 !important;
     color: white;
 }
 
 .cls-disabled {
-    background-color: rgb(121, 121, 121) !important;
+    background-color: rgb(158, 158, 158) !important;
     color: white;
 }
 
@@ -82,8 +82,8 @@
 }
 
 .tr-new-section {
-    border-top: 2pt solid rgb(202, 202, 202);
-    background-color: rgb(202, 202, 202);
+    border-top: 2pt solid rgb(201, 201, 201);
+    background-color: rgb(226, 226, 226);
     vertical-align: top;
 }
 
